# BuckeyeVerticalSoftware

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  backup_agent.txt  backup_cmake.txt  infLog.txt  logs copy.txt  logs.txt  mavlog.txt  moveRelease.cpp  servoConfig.txt  t_extrinsics.xml  t_intrinsics.xml  temp_agent.cpp  temp_agent.h  temp_main_test.cpp
.VSCodeCounter/2024-06-15_15-37-54/: details.md  diff-details.md  diff.md  diff.txt  results.md  results.txt
.VSCodeCounter/2024-06-15_15-38-30/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
JetsonToHM30/JetsonToHM30/details/: Task Details.docx
JetsonToHM30/JetsonToHM30/src/: jetsonToHM30Stream.py  testVid.py
JetsonToHM30/__MACOSX/JetsonToHM30/details/: ._Task Details.docx
TensorDetector/src/: MavLinkTest.cpp
include/: common.hpp  yolov8.hpp
siyi_sdk-main/: siyi_sdk.py
siyi_sdk-main/tests/: test_zoom_2.py
src/: .ServoTester.cpp.swo  .ServoTester.cpp.swp  .main_test.cpp.swp  BuckeyeVerticalSoftware.code-workspace  MavLinkOffboardSimTest.cpp  MavLinkTest.cpp  MavLinkTestOffboard.cpp  MavLinkTestSim.cpp  MavLinkTestSim2.cpp  OCRTest.cpp  ObjectDetectionTest.cpp  PWMPeriodFinder.cpp  PWMUtils.cpp  PWMUtils.h  ServoTester.cpp  agent copy.cpp  agent.cpp  agent.h  camera_server.cpp  detect.cpp  detect.h  detect.hpp  detect2.cpp  detectTest.cpp  latLonTest.cpp  localization.cpp  localization.h  localization2 copy.cpp  localization_test.cpp  main.cpp  main_test.cpp  moveRelease.cpp  objectLocalization.hpp
src/livefeed/: Bytes.cpp  Bytes.h  CRC.cpp  hex.cpp  hex.h  messages.h  test.cpp  test_udpclient.cpp  test_udpserver.cpp
src/livefeed/commandType/: commandType.cpp
src/livefeed/commands/: command.h
src/livefeed/crc/: CRC.cpp
src/livefeed/hex/: hex.cpp  hex.h
src/livefeed/message/: message.cpp  message.h
src/livefeed/sdk/: SIYI.cpp
src/livefeed/sdk/headers/: SIYI.h  commands.h  crc.h  hex.h  messages.h  safequeue.h
src/livefeed/sdk/sources/: SIYI.cpp  hex.cpp  messages.cpp  safequeue.cpp
tests/: detectTest.cpp
